--- a/public/tvplayer.html
+++ b/public/tvplayer.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>S0LACE • TV Player</title>
+    <title>Pr0ject Washington • TV Player</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
@@ -257,7 +257,7 @@
 
   <body class="media-tv-page">
     <header class="site-header">
-      <div class="site-title">S0LACE</div>
+      <div class="site-title">Pr0ject Washington</div>
       <nav class="site-nav">
         <a href="index.html">Home</a>
         <a href="games.html">Games</a>
