--- a/public/index.html
+++ b/public/index.html
@@ -299,20 +299,16 @@ const motdEl = document.getElementById("motd");
 const lines = [
   "any movie or show on media",
   "why are people actually using this site",
-  "shout out to aurababy and 55gms",
-  "if we average 2500 visitors per day im adding ads and selling out",
-  "made during school",
+  "is miguel w for making ts site or not?",
   "stop giving me stupid suggestions",
   "why are people actually using this site",
-  "as of 12/15 we are somehow averaging 500 viewer wth",
-  "rip trinity",
-  "what do yall know about moonlight",
-  "need to finish adding custom domains",
+  "if the office finds out abt this site im cooked.",
+  "what do yall know prime NFL 2018?",
   "Pr0ject Washington discord???",
   "it welcome to derry finale was peak",
-  "bro how are 500 people using this stupid site",
-  "coding is confuzzling",
-  "school admin im sowy for this site"
+  "coding confuses me fr",
+  "school admin im sowy for this site",
+  "what yall know about prime madden 21?"
 ];
 function setRandomMotd() {
   motdEl.textContent = lines[Math.floor(Math.random() * lines.length)];
