--- a/public/games.html
+++ b/public/games.html
@@ -49,7 +49,7 @@
         <!-- your existing cards kept as-is -->
         <a
           class="game-card"
-          href="https://forms.gle/VH47pgHw1kWAFuDY6"
+          href="https://forms.gle/DDGAhtKgJdaNSF2R8"
           data-name="suggestions"
         >
           <div class="game-thumb">
